# cellular_evolution

./: Cargo.toml  README.md
src/: main.rs
src/app/: app.rs  components.rs  mod.rs  new_tile.rs  proc.rs  tile.rs  utils.rs
src/compute/: data.rs
src/core/: elements.rs  features.rs  genes.rs  mod.rs  physics.rs  resources.rs  sim.rs
src/genes/: temp.txt
src/gpu/: buffers.rs  context.rs  mod.rs  shaders.rs
src/graphics/: border.rs  layers.rs  loaders.rs  mod.rs  renderer.rs
src/graphics/models/: cpu.rs  gpu.rs  mod.rs  space.rs
src/physics/: forces.rs  mod.rs  objects.rs
src/shaders/: border.wgsl  primitive_ren.wgsl  primitive_utils.wgsl
src/testing/: benches.rs  mod.rs  test.rs
src/utils/: algorithms.rs  data.rs  mod.rs  vector.rs
